# drowsiness-detector

./: .gitignore  README.md  app.py  drowsiness_detector.py  generate_alert_sound.py  pyproject.toml  pyvenv.cfg
.streamlit/: config.toml
Scripts/: activate  activate.bat
